fixed transitioning when enabling darkmode and added nav collapse

--- a/src/assets/styles/darkMode.scss
+++ b/src/assets/styles/darkMode.scss
@@ -1,12 +1,13 @@
 // include all element that require transition when toggling dark theme
 
-input,
-button,
+input, button, span,
 a, p, h1, h2, h3, h4, h5, h6,
 .bg-theme,
 .bg-theme-light,
+.selected-indicator-bg,
+.selected-indicator,
 ::placeholder {
-    transition: all ease-in 100ms;
+    transition: all ease-in 100ms !important;
 }
 
 .darkMode {
